@@ -6732,6 +6732,161 @@ return|return
 literal|false
 return|;
 block|}
+comment|// LUCENE-7491
+DECL|method|testMixedSchema
+specifier|public
+name|void
+name|testMixedSchema
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setMaxBufferedDocs
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StringField
+argument_list|(
+literal|"id"
+argument_list|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|i
+argument_list|)
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|IntPoint
+argument_list|(
+literal|"int"
+argument_list|,
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+comment|// index has 1 segment now (with 2 docs) and that segment does have points, but the "id" field in particular does NOT
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|IntPoint
+argument_list|(
+literal|"id"
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+comment|// now we write another segment where the id field does have points:
+name|w
+operator|.
+name|forceMerge
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|w
+argument_list|,
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
